[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiz_core = { version = "0.1.0", path = "../../quiz_core" }
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
